--- a/Weather-App/index.html
+++ b/Weather-App/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
 
-    <title>Weather Search App</title>
+    <title>App Tufão</title>
     <style>
       body {
         font-family: "Poppins", sans-serif;
